--- a/templates/user-password-hash.yaml
+++ b/templates/user-password-hash.yaml
@@ -1,15 +1,11 @@
 apiVersion: k8s.mariadb.com/v1alpha1
 kind: User
 metadata:
-  name: {{ include "mariadb.fullname" . }}-user-password-hash
-  labels:
-    {{- include "mariadb.labels" . | nindent 4 }}
+  name: {{ .Values.userPasswordHash.name | default "user-password-hash" }}
 spec:
-  name: {{ .Values.userPasswordHash.name | default (include "mariadb.fullname" .) }}
   mariaDbRef:
-    name: {{ .Values.userPasswordHash.mariaDbRefName | default (include "mariadb.fullname" .) }}
-  passwordHash: {{ .Values.userPasswordHash.passwordHash | quote }}
+    name: {{ .Values.userPasswordHash.mariaDbRefName | default "mariadb" }}
+  passwordHashSecretKeyRef:
+    name: {{ .Values.userPasswordHash.passwordHashSecretKeyRef.name | default "mariadb-auth" | quote }}
+    key: {{ .Values.userPasswordHash.passwordHashSecretKeyRef.key | default "passwordHash" | quote }}
   host: {{ .Values.userPasswordHash.host | default '"%"' }}
-  cleanupPolicy: {{ .Values.userPasswordHash.cleanupPolicy | default "Delete" }}
-  requeueInterval: {{ .Values.userPasswordHash.requeueInterval | default "30s" }}
-  retryInterval: {{ .Values.userPasswordHash.retryInterval | default "5s" }}
