--- a/templates/user-password-plugin.yaml
+++ b/templates/user-password-plugin.yaml
@@ -1,18 +1,15 @@
 apiVersion: k8s.mariadb.com/v1alpha1
 kind: User
 metadata:
-  name: {{ include "mariadb.fullname" . }}-user-password-plugin
-  labels:
-    {{- include "mariadb.labels" . | nindent 4 }}
+  name: {{ .Values.userPasswordPlugin.name | default "user-password-plugin" }}
 spec:
-  name: {{ .Values.userPasswordPlugin.name | default (include "mariadb.fullname" .) }}
   mariaDbRef:
-    name: {{ .Values.userPasswordPlugin.mariaDbRefName | default (include "mariadb.fullname" .) }}
-  passwordSecretKeyRef:
-    name: {{ .Values.userPasswordPlugin.passwordSecretKeyRef.name | quote }}
-    key: {{ .Values.userPasswordPlugin.passwordSecretKeyRef.key | quote }}
-  authenticationPlugin: {{ .Values.userPasswordPlugin.authenticationPlugin | quote }}
+    name: {{ .Values.userPasswordPlugin.mariaDbRefName | default "mariadb" }}
+  passwordPlugin:
+    pluginNameSecretKeyRef:
+      name: {{ .Values.userPasswordPlugin.pluginNameSecretKeyRef.name | default "mariadb-auth" | quote }}
+      key: {{ .Values.userPasswordPlugin.pluginNameSecretKeyRef.key | default "nativePasswordPlugin" | quote }}
+    pluginArgSecretKeyRef:
+      name: {{ .Values.userPasswordPlugin.pluginArgSecretKeyRef.name | default "mariadb-auth" | quote }}
+      key: {{ .Values.userPasswordPlugin.pluginArgSecretKeyRef.key | default "passwordHash" | quote }}
   host: {{ .Values.userPasswordPlugin.host | default '"%"' }}
-  cleanupPolicy: {{ .Values.userPasswordPlugin.cleanupPolicy | default "Delete" }}
-  requeueInterval: {{ .Values.userPasswordPlugin.requeueInterval | default "30s" }}
-  retryInterval: {{ .Values.userPasswordPlugin.retryInterval | default "5s" }}
