--- a/values.yaml
+++ b/values.yaml
@@ -308,6 +308,185 @@ mariadbGaleraProduction:
   metrics:
     enabled: true
 
+# Example for mariadbGaleraMaxscale
+mariadbGaleraMaxscale:
+  rootPasswordSecretKeyRef:
+    name: "mariadb-galera-maxscale"
+    key: "root-password"
+  username: "mariadb"
+  passwordSecretKeyRef:
+    name: "mariadb-password"
+    key: "password"
+    generate: true
+  database: "mariadb"
+  storage:
+    size: 1Gi
+  replicas: 3
+  maxScale:
+    enabled: true
+    kubernetesService:
+      type: LoadBalancer
+      metadata:
+        annotations:
+          metallb: "172.18.0.22"
+    guiKubernetesService:
+      type: LoadBalancer
+      metadata:
+        annotations:
+          metallb: "172.18.0.23"
+    connection:
+      secretName: "maxscale-conn"
+      port: 3306
+    metrics:
+      enabled: true
+  galera:
+    enabled: true
+  service:
+    type: LoadBalancer
+    metadata:
+      annotations:
+        metallb: "172.18.0.24"
+  primaryService:
+    type: LoadBalancer
+    metadata:
+      annotations:
+        metallb: "172.18.0.25"
+  secondaryService:
+    type: LoadBalancer
+    metadata:
+      annotations:
+        metallb: "172.18.0.26"
+  metrics:
+    enabled: true
+
+# Example for mariadbGaleraFromS3
+mariadbGaleraFromS3:
+  storage:
+    size: 1Gi
+  replicas: 3
+  galera:
+    enabled: true
+  bootstrapFrom:
+    s3:
+      bucket: "backups"
+      prefix: "mariadb"
+      endpoint: "minio.minio.svc.cluster.local:9000"
+      region: "us-east-1"
+      accessKeyIdSecretKeyRef:
+        name: "minio"
+        key: "access-key-id"
+      secretAccessKeySecretKeyRef:
+        name: "minio"
+        key: "secret-access-key"
+      tls:
+        enabled: true
+        caSecretKeyRef:
+          name: "minio-ca"
+          key: "ca.crt"
+    stagingStorage:
+      persistentVolumeClaim:
+        resources:
+          requests:
+            storage: 1Gi
+        accessModes:
+          - ReadWriteOnce
+    restoreJob:
+      resources:
+        requests:
+          cpu: 100m
+          memory: 128Mi
+        limits:
+          memory: 1Gi
+  service:
+    type: LoadBalancer
+  primaryService:
+    type: LoadBalancer
+  secondaryService:
+    type: LoadBalancer
+  metrics:
+    enabled: true
+  resources:
+    requests:
+      cpu: 100m
+      memory: 128Mi
+    limits:
+      memory: 1Gi
+
+# Example for backupScheduled
+backupScheduled:
+  mariaDbRefName: "mariadb"
+  schedule:
+    suspend: false
+  timeZone: "UTC"
+  maxRetention: "720h"
+  compression: "bzip2"
+  storage:
+    s3:
+      bucket: "backups"
+      endpoint: "minio.minio.svc.cluster.local:9000"
+      accessKeyIdSecretKeyRef:
+        name: "minio"
+        key: "access-key-id"
+      secretAccessKeySecretKeyRef:
+        name: "minio"
+        key: "secret-access-key"
+      tls:
+        enabled: true
+        caSecretKeyRef:
+          name: "minio-ca"
+          key: "ca.crt"
+  stagingStorage:
+    persistentVolumeClaim:
+      resources:
+        requests:
+          storage: 10Gi
+      accessModes:
+        - ReadWriteOnce
+  logLevel: info
+  resources:
+    requests:
+      cpu: 100m
+      memory: 128Mi
+    limits:
+      cpu: 300m
+      memory: 512Mi
+  affinity:
+    antiAffinityEnabled: true
+
+# Example for backupRetention
+backupRetention:
+  mariaDbRefName: "mariadb"
+  maxRetention: "720h"
+  storage:
+    persistentVolumeClaim:
+      resources:
+        requests:
+          storage: 100Mi
+      accessModes:
+        - ReadWriteOnce
+
+# Example for restoreTargetRecoveryTime
+restoreTargetRecoveryTime:
+  mariaDbRefName: "mariadb"
+  backupRef: "backup"
+  targetRecoveryTime: "2023-12-19T09:00:00Z"
+  s3:
+    bucket: "backups"
+    prefix: "mariadb"
+    endpoint: "minio.minio.svc.cluster.local:9000"
+    region: "us-east-1"
+    accessKeyIdSecretKeyRef:
+      name: "minio"
+      key: "access-key-id"
+    secretAccessKeySecretKeyRef:
+      name: "minio"
+      key: "secret-access-key"
+    tls:
+      enabled: true
+      caSecretKeyRef:
+        name: "minio-ca"
+        key: "ca.crt"
+
 # Example for connectionCustomDsn
 connectionCustomDsn:
   mariaDbRefName: "mariadb"
@@ -437,6 +616,7 @@ restoreSpecificDatabase:
 # Example for restoreTargetRecoveryTime
 restoreTargetRecoveryTime:
   mariaDbRefName: "mariadb"
+  backupRef: "backup"
   targetRecoveryTime: "2023-12-19T09:00:00Z"
   s3:
     bucket: "backups"
@@ -494,3 +674,37 @@ userTls:
   cleanupPolicy: Delete
   requeueInterval: 30s
   retryInterval: 5s
+
+maxscaleFull:
+  name: "maxscale"
+  image: "mariadb/maxscale:latest"
+  imagePullPolicy: "IfNotPresent"
+  imagePullSecrets: []
+  inheritMetadata: {}
+  podMetadata: {}
+  replicas: 1
+  servers: []
+  services: []
+  monitor: {}
+  admin: {}
+  config: {}
+  auth: {}
+  podSecurityContext: {}
+  securityContext: {}
+  updateStrategy: {}
+  kubernetesService:
+    type: "ClusterIP"
+    annotations:
+      metallbLoadBalancerIP: ""
+  guiKubernetesService:
+    type: "ClusterIP"
+    annotations:
+      metallbLoadBalancerIP: ""
+  connection:
+    secretName: ""
+    port: 3306
+  metrics:
+    enabled: false
+  suspend: false
+  resources: {}
+  livenessProbe: {}
