--- a/templates/grant.yaml
+++ b/templates/grant.yaml
@@ -13,7 +13,7 @@ spec:
   table: {{ .Values.grant.table | quote }}
   username: {{ .Values.grant.username | quote }}
   grantOption: {{ .Values.grant.grantOption | default true }}
-  host: {{ .Values.grant.host | default '"%"' }}
+  host: {{ .Values.grant.host | default "%" }}
   cleanupPolicy: {{ .Values.grant.cleanupPolicy | default "Delete" }}
   requeueInterval: {{ .Values.grant.requeueInterval | default "30s" }}
   retryInterval: {{ .Values.grant.retryInterval | default "5s" }}
