--- a/templates/user-password-hash.yaml
+++ b/templates/user-password-hash.yaml
@@ -8,4 +8,4 @@ spec:
   passwordHashSecretKeyRef:
     name: {{ .Values.userPasswordHash.passwordHashSecretKeyRef.name | default "mariadb-auth" | quote }}
     key: {{ .Values.userPasswordHash.passwordHashSecretKeyRef.key | default "passwordHash" | quote }}
-  host: {{ .Values.userPasswordHash.host | default '"%"' }}
+  host: {{ .Values.userPasswordHash.host | default "%" }}
