--- a/templates/user-password-plugin.yaml
+++ b/templates/user-password-plugin.yaml
@@ -12,4 +12,4 @@ spec:
     pluginArgSecretKeyRef:
       name: {{ .Values.userPasswordPlugin.pluginArgSecretKeyRef.name | default "mariadb-auth" | quote }}
       key: {{ .Values.userPasswordPlugin.pluginArgSecretKeyRef.key | default "passwordHash" | quote }}
-  host: {{ .Values.userPasswordPlugin.host | default '"%"' }}
+  host: {{ .Values.userPasswordPlugin.host | default "%" }}
