--- a/templates/mariadb_full.yaml
+++ b/templates/mariadb_full.yaml
@@ -26,10 +26,10 @@ spec:
   volumes:
     - name: mariabackup
       persistentVolumeClaim:
-        claimName: {{ .Values.mariadbFull.volumes[0].persistentVolumeClaim.claimName | default "mariabackup" | quote }}
+        claimName: {{ index .Values.mariadbFull.volumes 0 "persistentVolumeClaim" "claimName" | default "mariabackup" | quote }}
   volumeMounts:
     - name: mariabackup
-      mountPath: {{ .Values.mariadbFull.volumeMounts[0].mountPath | default "/var/mariadb/backup/" | quote }}
+      mountPath: {{ index .Values.mariadbFull.volumeMounts 0 "mountPath" | default "/var/mariadb/backup/" | quote }}
   connection:
     secretName: {{ .Values.mariadbFull.connection.secretName | quote }}
     secretTemplate:
@@ -53,7 +53,7 @@ spec:
       memory: {{ .Values.mariadbFull.resources.limits.memory | default "1Gi" }}
   env:
     - name: TZ
-      value: {{ .Values.mariadbFull.env[0].value | default "SYSTEM" | quote }}
+      value: {{ index .Values.mariadbFull.env 0 "value" | default "SYSTEM" | quote }}
   podSecurityContext:
     runAsUser: {{ .Values.mariadbFull.podSecurityContext.runAsUser | default 0 }}
   securityContext:
